# poznote

./: .dockerignore  .env.dev  .env.dev.template  .env.example  .env.template  .gitignore  000-default.conf  CLOUD.MD  CLOUD.md  CSP_IMPLEMENTATION_GUIDE.md  CSP_SUMMARY.md  Dockerfile  Dockerfile.hub  Dockerfile.prod  EXCALIDRAW_FEATURE.md  EXCALIDRAW_HYBRID_ARCHITECTURE.md  EXCALIDRAW_SUMMARY.md  EXCALIDRAW_TROUBLESHOOTING.md  LICENCE  NGINX_CSP_CONFIG.md  POZNOTE-CLOUD-INSTALL.md  POZNOTE-CLOUD-MANAGE.md  POZNOTE-CLOUD.md  POZNOTE-SELF-HOSTED-INSTALL.md  RAILWAY.md  README.fr.md  README.md  README_NEW.md  REBUILD_NOTES.md  RELEASE_NOTES.md  SELF_HOSTED.md  TROUBLESHOOTING_UPLOAD.md  VERSION_SYSTEM.md  audit_complet_sqlite.sh  backup-poznote.sh  backups-poznote.sh  check_braces.js  debug_json.php  docker-compose-alternative.yml  docker-compose-demo.yml  (+64 more)
.github/: FUNDING.yml
Docs/: BACKUP_RESTORE_GUIDE.md  MULTIUSER.md  POZNOTE-CLOUD.md
docs/: AI-ASSISTANT.md  API-REST.md  API_README.md  CLAUDE-CLI.md  DOCKER-VERSIONING.md  FEATURES.md  MCP-SERVER.md  TROUBLESHOOTING.md  VSCODE-COPILOT.md
excalidraw-build/: package-lock.json  package.json  vite.config.js
mcp-server/: .dockerignore  CLAUDE-CLI.md  Dockerfile  README-old-method.md  README.md  VSCODE-COPILOT.md  pyproject.toml
mcp-server/docs/: MCP-SERVER.md  VSCODE-COPILOT.md
mcp-server/src/poznote_mcp/: __init__.py  client.py  server.py
mcp-server/tests/: test_env_settings.py  test_error_handling.py  test_tasklist_content.py  test_user_id_forwarding.py  test_workspace_passthrough.py
readme/: FEATURES.md  (+5 more)
(+684 files in other folders)
